introduce the pkg supplement modifications log system. implement pkg supplement modification logs for icon changes. implement pkg supplement modification logs for localization. implement pkg supplement modification logs for category changes implement pkg supplement modification logs for change log. fix the is_latest constraint on the pkg_version table.